# Fiction_Writer

./: .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-03T21-16-42-149Z.yml  page-2026-04-03T21-16-50-927Z.yml  page-2026-04-03T21-16-53-453Z.yml  page-2026-04-03T21-16-56-306Z.yml  page-2026-04-03T21-17-30-150Z.yml  page-2026-04-03T21-19-06-823Z.yml  page-2026-04-03T21-19-13-592Z.yml  page-2026-04-03T21-19-17-533Z.yml  page-2026-04-03T21-19-20-734Z.yml  page-2026-04-03T21-19-24-838Z.yml  (+9 more)
cli/: narrative_cli.py
sidecar/: main.py  pyproject.toml
sidecar/models/: proposals.py  registry.py  state.py
sidecar/prompts/: w0_prompts.py  w1_prompts.py  w2_prompts.py  w3_prompts.py  w4_prompts.py  w5_prompts.py  w6_prompts.py  w7_prompts.py
sidecar/routers/: metadata.py  orchestrator.py  prompts.py  proposals.py  status.py  workflows.py
sidecar/shared/: s1_context_builder.py  s2_memory_writer.py  s3_chunk_manager.py  s4_proposal_queue.py
sidecar/supervisor/: __init__.py  planner.py  planner_llm.py  policy.py  prompt_policy.py  quality.py  tool_registry.py  tools.py
sidecar/tools/: analysis.py  file_io.py  rag.py  text_processing.py
sidecar/utils/: lock.py  port.py
sidecar/workflows/: w0_orchestrator.py  w1_import.py  w1_run_events.py  w2_manuscript_sync.py  w3_writing_assistant.py  w4_consistency_check.py  w5_simulation.py  w6_beta_reader.py  w7_metadata_ingestion.py
(+849 files in other folders)
